--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body>
     <!-- Navigation -->
     <nav class="nav">
-    <div class="nav-container">
-        <div class="nav-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
+        <div class="nav-container">
+            <div class="nav-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
 
-        <ul class="nav-links">
-            <li><a href="#profil">Profil</a></li>
-            <li><a href="#projets">Projets</a></li>
-            <li><a href="#experience">Expérience</a></li>
-            <li><a href="#competences">Compétences</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
-</nav>
+            <ul class="nav-links">
+                <li><a href="#profil">Profil</a></li>
+                <li><a href="#projets">Projets</a></li>
+                <li><a href="#experience">Expérience</a></li>
+                <li><a href="#competences">Compétences</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- Hero Section -->
     <header class="hero">
@@ -116,7 +116,8 @@
                     </div>
                     <h3 class="project-title">App Nutrition</h3>
                     <p class="project-subtitle">Gestion Alimentaire & Suivi Nutritionnel</p>
-                    <p class="project-desc">Back-end d'une application de gestion alimentaire qui agrège et structure des
+                    <p class="project-desc">Back-end d'une application de gestion alimentaire qui agrège et structure
+                        des
                         données nutritionnelles depuis FatSecret et Open Food Facts. Authentification OAuth et
                         traitement asynchrone des données. </p>
                     <div class="project-tech">
@@ -126,7 +127,8 @@
                         <span class="tech-tag">Open Food Facts</span>
                         <span class="tech-tag">FatSecret</span>
                     </div>
-                    <a target="_blank" href="https://github.com/RaminJll/Application-de-gestion-alimentaire-Back-end" class="github-project">
+                    <a target="_blank" href="https://github.com/RaminJll/Application-de-gestion-alimentaire-Back-end"
+                        class="github-project">
                         <img class="github-img" src="github-img.png" alt="github">
                     </a>
                 </article>
@@ -182,7 +184,7 @@
                         <div class="project-icon">📊</div>
                         <span class="project-date">SEPT 2025 - OCT 2025</span>
                     </div>
-                    <h3 class="project-title">IA & Deep Learning</h3>
+                    <h3 class="project-title">Clic publicitaire</h3>
                     <p class="project-subtitle">Prédiction CTR</p>
                     <p class="project-desc">Modèle MLP avec pipeline persistant afin de prédire si un utilisateur
                         cliquera ou non sur une annonce publicitaire.
@@ -373,8 +375,7 @@
                                     alt="linkedin"></span>
                         </a>
                         <a target="_blank" href="https://github.com/RaminJll" class="contact-method">
-                            <span class="contact-icon-bonus"><img width="100%" src="github-img.png"
-                                    alt="github"></span>
+                            <span class="contact-icon-bonus"><img width="100%" src="github-img.png" alt="github"></span>
                         </a>
                     </div>
                 </div>
